# url_shortener

./: LICENSE  README.MD  docker-compose.yaml
api/: .coveragerc  .gitignore  Dockerfile  conftest.py  entrypoint.sh  mypy.ini  pyproject.toml
api/config/: settings.py  swagger_settings.py
api/postman_colection/: URL Shortener heroku.postman_collection.json  URL Shortener local.postman_collection.json
api/schemas/: URL Shortener API.yaml
api/shortener/: models.py  serializers.py  urls.py  views.py
api/shortener/migrations/: 0001_initial.py
api/shortener/tests/: test_model.py  test_views.py
api/users/: models.py
api/users/migrations/: 0001_initial.py
api/users/tests/: test_model.py
envs/: api.default.env  postgres.default.env
